home-work-3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuber-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /otusapp/([^/]+)/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: kuber-service
            port:
              number: 80
      - path: /health
        pathType: Exact
        backend:
          service:
            name: kuber-service
            port:
              number: 80
